--- a/style.css
+++ b/style.css
@@ -2,14 +2,13 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: cornflowerblue;
+    background-color: azure;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
-
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .mainBody {
@@ -17,49 +16,68 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
     width: 100vw;
     height: 100vh;
-
 }
 
 .btnContainer {
     display: flex;
-    border-style: solid;
-    gap: 50px;
     margin-top: 30px;
     height: 15vh;
-    border-radius: 10px;
+    gap: 50px;
     align-items: center;
     justify-items: center;
     width: auto;
 }
 
 .resultContainer {
-    border-style: solid;
+    border-style:groove;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     border-radius: 10px;
+    border-width: 30px;
+    background-color: lightyellow;
+    color: red;
+    font-style: italic;
+    font-weight: bold;
     width: 300px;
-    height: 75px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    height: 50px;
+    margin: 40px;
     text-align: center;
-
+    padding: 60px;
 }
 
 .scoreContainer {
     display: flex;
+    flex-direction: column;
+    padding: 40px;
+    margin: 50px;
     align-items: center;
     justify-content: center;
     gap: 50px;
-    border-style: solid;
-    border-radius: 10px;
     width: 300px;
     height: 100px;
-    margin-bottom: 50px;
+    font-weight: bold;
+    font-size: larger;
+}
+
+.robot,.human {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#humanScore, #robotScore {
+    color: red;
+    font-weight: bolder;
+    font-size: larger;
 }
 
 .options,
-.optionsAgain {
+.optionsAgain,
+.optionsAfterGame {
     width: 20vw;
     max-width: 100px;
     height: 10vh;
@@ -71,17 +89,19 @@ body {
     background-color: white;
 }
 
-.optionsAfterGame {
-    width: 30vw;
-    height: 10vh;
-    border-radius: 40px;
-    outline: solid 2px black;
-    transition: outline 0.1s linear;
-    margin: 0.5em;
+.options:hover,
+#playAgain:hover {
+    outline-width: 5px;
+    cursor: crosshair;
 }
 
-.options:hover,
-.optionsAgain:hover {
-    outline-width: 5px;
-    cursor: pointer;
+#playAgain {
+    background-color: blue;
+    font-size: large;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 10px;
+    color: aliceblue;
+    box-shadow: 40px;
+    margin: 40px;
 }
